--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -158,6 +157,9 @@
             100% { opacity: 0; }
         }
     </style>
+    <!-- Google AdSense Code -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4836166986389793"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h1><i class="fab fa-spotify"></i> Spotify Music Downloader</h1>
@@ -165,6 +167,19 @@
         <input type="text" id="searchInput" placeholder="Search for a song..." />
         <button id="searchButton">Search</button>
     </div>
+    
+    <!-- AdSense Ad Unit -->
+    <div style="text-align:center; margin: 20px 0;">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-4836166986389793"
+             data-ad-slot="1234567890"
+             data-ad-format="auto"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
     <div id="results"></div>
     <audio id="audioPlayer" controls>
         <source id="audioSource" src="" type="audio/mpeg">
@@ -231,32 +246,29 @@
                 songDiv.appendChild(songImage);
                 songDiv.appendChild(songTitle);
                 songDiv.appendChild(buttonGroup);
+
                 resultsDiv.appendChild(songDiv);
             });
+            document.getElementById('errorMessage').style.opacity = 0;
+        }
+
+        function displayErrorMessage(message) {
+            const errorMessageDiv = document.getElementById('errorMessage');
+            errorMessageDiv.textContent = message;
+            errorMessageDiv.style.opacity = 1;
+            setTimeout(() => {
+                errorMessageDiv.style.opacity = 0;
+            }, 3000);
         }
 
         function playMusic(url) {
             const audioPlayer = document.getElementById('audioPlayer');
             const audioSource = document.getElementById('audioSource');
             audioSource.src = url;
-            audioPlayer.load();
             audioPlayer.style.display = 'block';
+            audioPlayer.load();
             audioPlayer.play();
-        }
-
-        function displayErrorMessage(message) {
-            const errorMessageDiv = document.getElementById('errorMessage');
-            errorMessageDiv.textContent = message;
-            errorMessageDiv.style.display = 'block';
-            errorMessageDiv.style.opacity = '1';
-            setTimeout(() => {
-                errorMessageDiv.style.opacity = '0';
-                setTimeout(() => {
-                    errorMessageDiv.style.display = 'none';
-                }, 500);
-            }, 3000);
         }
     </script>
 </body>
-</html/>
-    
+</html>
